# book-library-db

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/library_db/: cli.py  library.py  option.py
src/library_db/database/: db.py
src/library_db/models/: book.py
src/library_db/utils/: isbn.py  year.py
tests/unit/: test_book.py  test_data_db.txt  test_db.py  test_library.py  test_option.py  test_utils.py
